@@ -49,6 +49,9 @@ bzr-svn	1.0.3					  UNRELEASED
 
   * Always detect newer tags. (Jelmer Vernooij, #504314)
 
+  * Non-unicode characters in existing commit messages are now squashed.
+    (Jelmer vernooij, #586408, #509063)
+
  FEATURES
 
   * Support fetching a limited number of revisions. (Michael Hudson)
